use regular flat folders
the route nesting got super confusing

--- a/workspaces/web/app/routes/_guide.lore/content.mdx
+++ b/workspaces/web/app/routes/_guide.lore/content.mdx
@@ -1,4 +1,4 @@
-import { getPageMeta } from "../../../meta.ts"
+import { getPageMeta } from "../../meta.ts"
 
 export const title = "World Lore"
 export const meta = getPageMeta(title)
