--- a/workspaces/web/app/routes/_guide.rulebook/content.mdx
+++ b/workspaces/web/app/routes/_guide.rulebook/content.mdx
@@ -1,6 +1,6 @@
 import { Link } from "react-router"
-import { getPageMeta } from "../../../meta.ts"
-import { Callout } from "../.components/Callout.tsx"
+import { getPageMeta } from "../../meta.ts"
+import { Callout } from "../../components/Callout.tsx"
 import { AspectList, AttributeList, TraitList } from "./data.tsx"
 
 **Aspects of Nature** is a story-focused, rules-lite tabletop roleplaying game. Set in a world populated by several varieties of humanoid races, all are born with the ability to manipulate one or more elements of nature, or **Aspects**, to their will.
