--- a/workspaces/web/app/routes/_guide.rulebook/content.mdx
+++ b/workspaces/web/app/routes/_guide.rulebook/content.mdx
@@ -1,6 +1,6 @@
 import { Link } from "react-router"
-import { getPageMeta } from "../../meta.ts"
 import { Callout } from "../../components/Callout.tsx"
+import { getPageMeta } from "../../meta.ts"
 import { AspectList, AttributeList, TraitList } from "./data.tsx"
 
 **Aspects of Nature** is a story-focused, rules-lite tabletop roleplaying game. Set in a world populated by several varieties of humanoid races, all are born with the ability to manipulate one or more elements of nature, or **Aspects**, to their will.
@@ -131,7 +131,7 @@ Your character's **attuned** aspects are those with a base score of one or more.
 
 ## Levels & Progression
 
-<Callout>This has not yet been implemented on character sheets.</Callout>
+<Callout>This has not yet been implemented in the character builder.</Callout>
 
 Your character's level represents their experience and development. All character levels in a group should be the same, and you can start at any level you like. Your level increases on each **milestone**, such as a pivotal plot point, major accomplishment, or notable checkpoint.
 
