clarify roll-under

--- a/workspaces/web/app/routes/_guide.rulebook/content.mdx
+++ b/workspaces/web/app/routes/_guide.rulebook/content.mdx
@@ -97,7 +97,7 @@ You may choose to rest for a number of in-game hours, which heals one hit and fa
 
 Action rolls are the core determinant of success or failure. The result of the die represents the difficulty of the task.
 
-Action rolls use a roll-under system. For a roll to succeed, it must be **equal or lower than the target value**, depending on the type of roll being made.
+For a roll to succeed, **the target must be equal to or higher than the roll result**. In other words, the roll result must be equal to or lower than the target. For [skill checks](#skill-checks), the target will be one of your attribute scores, meaning your score has to be higher than the roll to succeed.
 
 **Only use action rolls when the action has some chance of success or failure.** If the action would always succeed or always fail, the action should carry out without a roll.
 
@@ -105,8 +105,8 @@ Action rolls use a roll-under system. For a roll to succeed, it must be **equal 
 
 Modifier dice are added to action rolls and can alter a roll's chance of success.
 
-- Power dice **subtract** from the roll, narratively making the roll easier.
-- Risk dice **add** to the roll, narratively making it harder.
+- Power dice **subtract** from the roll, making the roll easier.
+- Risk dice **add** to the roll, making it harder.
 
 Modifier dice alter the roll's result depending on how they land:
 
