--- a/workspaces/web/app/routes/_guide.rulebook/content.mdx
+++ b/workspaces/web/app/routes/_guide.rulebook/content.mdx
@@ -294,7 +294,7 @@ Example: your party is working to dismantle a large, powerful crime syndicate. Y
 
 ## Zones & Ranges
 
-Characters in a scene are placed in a 2D space divided into **zones**. Zones represent general spaces where characters can interact with other characters. A zone would be about 5 to 10 square meters in size. They might be smaller in a tighter space like a small office room, or larger in something like an open field. All characters can hear other characters within their zone clearly, as well as physically interact with them.
+Characters in a scene occupy one or more **zones**. Zones represent the difference spaces where characters can interact with other characters. A zone would be about 5 to 10 square meters in size. They might be smaller in a tighter space like a small office room, or larger in something like an open field. All characters can hear other characters within their zone clearly, as well as physically interact with them.
 
 A character's **range** to another character is the number of zones from one to the other:
 
@@ -306,9 +306,9 @@ A character's **range** to another character is the number of zones from one to 
 
 A character's range affects their action rolls in the following ways:
 
-- Characters may only attack other characters with Strike in immediate range
-- If attacking with Throw, the other character must be in immediate to short range
-- If attacking with Shoot, the other character cannot be in immediate range, and cannot be at a distance further than your Sense score (e.g. if your sense is 5, they must be 5 or fewer zones away)
+- Characters may only attack other characters with **Strike** in immediate range
+- If attacking with **Throw**, the other character must be in immediate to short range
+- If attacking with **Shoot**, the other character cannot be in immediate range, and cannot be at a distance further than your **Sense** score (if your **Sense** is 5, they must be 5 or fewer zones away)
 - When making an aspect check with targets at medium to long range, add a risk die
 - Aspect art targets cannot be further than long range
 
@@ -317,6 +317,10 @@ Zones can be laid out in any way you prefer, including but not limited to:
 - with vague narrative positioning in theater-of-the-mind
 - as distinct areas on a map
 - as cells on a grid
+
+Characters may always move from one zone to another, as long as there's nothing that logically impedes them. For example, a wall between two zones would keep a character from moving freely between them. For something like a huge chasm, they might require a successful **Jump** check.
+
+Zones may also have a vertical component, like an upper balcony, a tall tree with high-up branches to perch on, or a higher space where someone is flying with wings or Wind art. The same considerations apply; if there's no feasable way for someone to fly or otherwise elevate themselves, they wouldn't be able to enter a zone above them.
 
 ## Traits
 
