add idea roll optional rule

--- a/workspaces/web/app/routes/_guide.rulebook/content.mdx
+++ b/workspaces/web/app/routes/_guide.rulebook/content.mdx
@@ -180,6 +180,16 @@ Example: a character needs to catch a train to work.
 - 3: it seems like the whole world doesn't want you to get to that train! they'll need to pass several skill checks to make it on time
 - 1: the train itself got delayed; they'll be late no matter what
 
+### Ideas
+
+An **idea roll** is an optional rule. If you're not sure how to approach a situation, you can roll an **Intuit** check. If you pass, the narrator can give you some helpful suggestions.
+
+You can handle failure in a few ways:
+
+- withhold suggestions
+- give potentially unhelpful suggestions that may accomplish the goal, but with some unwanted side-effect
+- give less suggestions than you would with a success
+
 ## Aspects
 
 Aspects are the five elements of nature which characters may manipulate to their will.
